# auxide-dsp

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  Cargo.toml  README.md  chat.md  dhat-heap.json  pre-commit-hook.sh  update_all_versions.sh  update_versions.sh
.github/: copilot-instructions.md
examples/: comprehensive_demo.rs  simple_synth.rs  working_demo.rs
src/: analysis.rs  builders.rs  dynamics.rs  effects.rs  envelopes.rs  filters.rs  helpers.rs  lib.rs  math.rs  modulators.rs  oscillators.rs  utility.rs  wavetables.rs  windows.rs
src/nodes/: dynamics.rs  envelopes.rs  filters.rs  fx.rs  lfo.rs  mod.rs  oscillators.rs  pitch.rs  shapers.rs  utility.rs
tarpaulin/: tarpaulin-report.html
tests/: builders_tests.rs  helpers_tests.rs  nodes_dynamics_tests.rs  nodes_envelopes_tests.rs  nodes_filters_tests.rs  nodes_fx_tests.rs  nodes_lfo_tests.rs  nodes_osc_tests.rs  nodes_pitch_tests.rs  nodes_shapers_tests.rs  nodes_utility_tests.rs  rt_safety_tests.rs  wavetables_windows_tests.rs
