[package]
name = "auxide-dsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Comprehensive DSP node library for Auxide audio graphs. Includes oscillators, filters, effects, envelopes, and modulators for real-time audio synthesis."
repository = "https://github.com/Michael-A-Kuykendall/auxide-dsp"
keywords = ["audio", "dsp", "synthesis", "real-time", "oscillators"]
categories = ["multimedia::audio", "api-bindings"]

[features]
default = []

[dependencies]
auxide = { workspace = true }
realfft = "3.3"
num-complex = "0.4"

[dev-dependencies]
dhat = "0.3"
proptest = "1.0"
